[package]
name = "yamaha_rs"
version = "0.1.4"
edition = "2024"
description = "Yamaha Extended Control API in Rust"
keywords = ["yamaha", "musiccast"]
readme = "README.md"
license = "GPL-3.0"
homepage = "https://github.com/Kriannn/yamaha_rs"
repository = "https://github.com/Kriannn/yamaha_rs"

[dependencies]
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = {version = "1.0.145", default-features = false, features = ["alloc"] }
